<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginBottom="3dp"
    android:layout_marginTop="3dp"
    android:background="@color/colorPrimary"
    android:orientation="horizontal"
    android:paddingBottom="4dp"
    android:paddingTop="4dp">

    <TextView
        android:id="@+id/btn_playlist"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_playlist"
        android:text="@string/list"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/btn_music"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_play"
        android:text="@string/music"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/btn_favorite"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_favorite"
        android:text="@string/favs"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

</LinearLayout>